# cityjson-paraview-plugin

./: .gitignore  CMakeLists.txt  Project.cbp  README.md
Plugin/: CMakeLists.txt  CityJSONReader.xml  paraview.plugin  vtkCityJSONReader.cxx  vtkCityJSONReader.h
Plugin/CityJSONReader/: CMakeLists.txt  CityJSONReader.xml  MyCityJSONReader.xml  vtk.module  vtkCityJSONFeature.cxx  vtkCityJSONFeature.h  vtkCityJSONReader.cxx  vtkCityJSONReader.h  vtkIOCityJSONModule.h  vtkMyCityJSONFeature.cxx  vtkMyCityJSONFeature.h  vtkMyCityJSONReader.cxx  vtkMyCityJSONReader.h
backup/: CMakeLists.txt
backup/Plugin/: CMakeLists.txt
